--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recoil": "^0.7.7",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
