--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
     "encoding": "^0.1.13",
     "eslint": "^9.15.0"
   }
