--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "react-dom": "18.2.0",
     "swiper": "^11.1.15",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
@@ -26,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
     "encoding": "^0.1.13",
-    "eslint": "^9.15.0"
+    "eslint": "^9.15.0",
+    "typescript": "5.7.2"
   }
 }
